--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <head>lesson 1</head>
-<body>hello world!</body>
+<body>hello world!
+--------------------------------------------
+  lesson 2 git pull 
+</body>
 </html>
