update from web ui

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>hello world!
 --------------------------------------------
   lesson 2 git pull 
+  -------------------------------------------
+  lesson 4 git commit
+  update from web ui
 </body>
 </html>
