update from web lesson 5

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   -------------------------------------------
   lesson 4 git commit
   update from web ui
+  -------------------------------------------
+  lesson 5 git commit
+  update from web ui
 </body>
 </html>
