update from vs code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   lesson 4 git commit
   update from web ui
   -------------------------------------------
+
+ 
+
   lesson 5 git commit
   update from web ui
+
+  lesson 6 git commit 
+  update from vs code
+
 </body>
 </html>
