--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
   lesson 6 git commit 
   update from vs code
 
+  lesson 7 switch to branch feature1
+  git branch feature1
+  git branch
+
 </body>
 </html>
