added branch command

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   lesson 7 switch to branch feature1
   git branch feature1
   git branch
+  -- this is create a branch on your computer
+  -- if you need to create to the github
+  git checkout feature1
+  --change to feature1 branch
+  git add .
+  git push
+  git push --set-upstream origin feature1
+  --than will create a branch on github
+  
+
 
 </body>
 </html>
