added merge feature1 to master

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
   git push --set-upstream origin feature1
   --than will create a branch on github
   
+lesson 8 merge feature1 to master
+ git checkout master
+ git merge feature1
+ git commit -am "merged with feature1"
+ git push
 
 
 </body>
